# fast_zero_project-master

./: .flake8  README.md  Taskfile.yml  alembic.ini  main.py  main.py.save  main.py.save.1  pyproject.toml  requirements.txt  sql_app.db  test.db
fast_zero/: app.py  auth.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: users.py
migrations/: env.py
migrations/versions/: a842f19bac55_create_users_table.py  b86b5a330a9a_add_username_column_to_users_table.py  b9c3d2a14db2_create_users_table.py  f5c9ad53a34b_add_username_column_to_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
